--- a/app/src/main/res/layout/contact_sync_layout.xml
+++ b/app/src/main/res/layout/contact_sync_layout.xml
@@ -9,6 +9,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_margin="40dp"
+        app:laserEnabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
