added error handling of configuration process

--- a/app/src/main/res/layout/contact_sync_layout.xml
+++ b/app/src/main/res/layout/contact_sync_layout.xml
@@ -64,7 +64,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_16dp"
-        android:text="@string/give_permission"
+        android:text="@string/give_camera_permission"
         app:layout_constraintBottom_toBottomOf="@+id/scanner"
         app:layout_constraintEnd_toEndOf="@+id/scanner"
         app:layout_constraintStart_toStartOf="@+id/scanner"
@@ -97,7 +97,7 @@
         app:layout_constraintEnd_toEndOf="@+id/scanner"
         app:layout_constraintStart_toStartOf="@+id/scanner"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.7"
+        app:layout_constraintVertical_bias="0.8"
         app:layout_constraintVertical_chainStyle="packed" />
 
     <com.google.android.material.button.MaterialButton
